--- a/core/src/test/res/values/karte.xml
+++ b/core/src/test/res/values/karte.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="karte_app_key">sampleappkey_1234567890123456789</string>
+    <string name="karte_api_key">sampleapikey_1234567890123456789</string>
 </resources>
