--- a/examples/sample_kotlin/src/main/res/layout/activity_main.xml
+++ b/examples/sample_kotlin/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -26,8 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/space_x"
-                android:layout_marginRight="@dimen/space_x"
                 android:layout_marginTop="@dimen/space_x"
+                android:layout_marginRight="@dimen/space_x"
                 android:orientation="vertical">
 
                 <TextView
@@ -55,8 +55,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/space_x"
-                android:layout_marginRight="@dimen/space_x"
                 android:layout_marginTop="@dimen/space_x"
+                android:layout_marginRight="@dimen/space_x"
                 android:orientation="vertical">
 
 
@@ -80,6 +80,21 @@
                     android:layout_height="wrap_content"
                     android:text="Send Buy"
                     android:textAllCaps="false" />
+
+
+                <Button
+                    android:id="@+id/button_fetch_inbox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Fetch Inbox"
+                    android:textAllCaps="false" />
+
+                <TextView
+                    android:id="@+id/inbox_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Inbox response"
+                    android:textSize="16dp" />
             </LinearLayout>
 
         </LinearLayout>
