baseUrl from xml (#247)
* core: config rename baseUrl -> serviceUrl
iam: add config
* add api update

* add iam test

* fix: add config api for java

* add iam config builder

* vup ruby

--- a/core/src/test/res/values/karte.xml
+++ b/core/src/test/res/values/karte.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="karte_app_key">sampleappkey_1234567890123456789</string>
     <string name="karte_api_key">sampleapikey_1234567890123456789</string>
+    <string name="karte_base_url">https://b-rs.karte.io</string>
 </resources>
